@@ -1,3 +1,9 @@
+Tue Jul 15 22:05:21 1997  Theodore Y. Ts'o  <tytso@mit.edu>
+
+	* init_sec_context.c (krb5_gss_init_sec_context): Always copy the
+		mechtype so that delete_sec_context() can safely release
+		the OID without smashing memory passed in by the application.
+
 Mon Jun 30 14:05:51 1997  Kevin L Mitchell  <klmitch@mit.edu>
 
 	* accept_sec_context.c: added code to return a valid delegated
